# ens-fake-weather-data

./: .cruft.json  Dockerfile  pyproject.toml  requirements.txt  setup.py  test.ipynb  tox.ini
ens_fake_weather_data/: __init__.py  constants.py  fake_data.py  main.py
tests/: test_main.py
