[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ens-fake-weather-data"
authors = [
    {name = "Erwan Nisol", email = "erwan.nisol@free.fr"},
]
description = "FastAPI service for fake weather data"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "httpx>=0.27.0"
]


[project.optional-dependencies]
dev = [
    "pytest==7.4.2",
    "black==23.9.0",
    "tox==4.11.3",
    "pre-commit==3.4.0"
]


[tool.ruff]
select = ["D", "E", "F", "I", "N", "W"]
ignore = [
    "N999",  # Invalid module name (caused by cookiecutter syntax)
    "D203",  # Incompatible with D211
    "D213"  # Incompatible with D212
]

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]
